# WirelessMonitor

./: .clang-format.bak  .gitignore  CMakeLists-DESKTOP-DL5CFEA.txt  CMakeLists.txt  CMakeLists.txt.user.1f99fa8  CMakeLists.txt.user.2e99c35  CMakeLists.txt.user.a50218a  CMakeLists.txt.user.bd894ce  CMakeLists.txt.user.c4cf812  CfgClass.cpp  CfgClass.h  README.md  XMBWirelessMonitor.evb  defineH.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qt6.natvis  structH.h  update.json
.history/Charts/backup/: CThreadPool.cpp  charts.cpp  charts.h  readthread.cpp.bak
.history/ComTool/: Comtool.h
api/: CMakeLists.txt
api/ComReceiverThread/: ComReceiverThread.cpp  ComReceiverThread.h
api/ComToolDepend/: appconfig.cpp.backup  appdata.cpp  appdata.h  quihelper.cpp  quihelper.h  quihelperdata.cpp
api/ConfigClass/: ConfigClass.cpp  ConfigClass.h
api/Highlighter/: highlighter.cpp  highlighter.h
api/PythonWork/: PythonWork.cpp  PythonWork.h  PythonWorkWithI2C.cpp  PythonWorkWithI2C.h
api/QCustomPlotWithMouse/: QCustomPlotWithMouse.cpp  QCustomPlotWithMouse.h
api/QPushButtonWithMouse/: QPushButtonWithMouse.cpp  QPushButtonWithMouse.h
api/QTextEditWithKey/: QTextEditWithKey.cpp  QTextEditWithKey.h
api/RepeaterWidget/: CMakeLists.txt  RepeaterDialog.cpp  RepeaterDialog.h  RepeaterWidget.cpp  RepeaterWidget.h  VersionConfig.h  VersionConfig.h.in
api/TCPHandle/: CMakeLists.txt  TCPCommandHandle.cpp  TCPCommandHandle.h  TCPHandle.cpp  TCPHandle.h  TCPInfoHandle.cpp  TCPInfoHandle.h  TCPThreadController.cpp  TCPThreadController.h
api/USBHandle/: CMakeLists.txt  enumser.cpp  enumser.h  stdafx.h
api/USBHandle/ATL/include/: atlbuild.h
api/USBHandle/ATL/lib/: atls.lib
api/qmetarial/: qtmaterialappbar.cpp  qtmaterialavatar.cpp  qtmaterialdialog.cpp  qtmaterialdrawer_internal.cpp  qtmaterialiconbutton.cpp  qtmaterialslider_internal.cpp  qtmaterialsnackbar.cpp  qtmaterialtabs.cpp  qtmaterialtabs_internal.cpp  qtmaterialtextfield_internal.cpp  qtmaterialtoggle.cpp  qtmaterialtoggle_internal.cpp
api/qmetarial/include/qmetarial/: qtmaterialflatbutton.h  qtmaterialtabs.h
api/qmetarial/include/qmetarial/lib/: qtmaterialripple.h  qtmaterialstatetransitionevent.h
components/: CMakeLists.txt  RepeaterWidget.cpp  qtmaterialappbar.cpp  qtmaterialautocomplete.cpp  qtmaterialbadge.cpp  qtmaterialcheckbox.cpp  qtmaterialcheckbox_p.h  qtmaterialcircularprogress.cpp  qtmaterialcircularprogress_internal.cpp  qtmaterialfab.cpp  qtmaterialfab_p.h  qtmaterialflatbutton_internal.cpp  qtmaterialiconbutton_p.h  qtmaterialmenu.cpp  qtmaterialprogress.cpp  qtmaterialradiobutton.cpp  qtmaterialradiobutton_p.h  qtmaterialraisedbutton.cpp  qtmaterialraisedbutton_p.h  qtmaterialslider.cpp  qtmaterialsnackbar_internal.cpp
components/ChannelConfiguration/: channelconfiguration.cpp  channelconfiguration.h  channelconfiguration.ui
components/Charts/: CThreadPool.h  charts.cpp  charts.h  charts.ui  charts_next.cpp  charts_next.h  charts_next.ui  readthread.cpp  readthread.h  readthread.h.bak
components/ComTool/: ComToolAutoReply.cpp  ComToolAutoReplyDialog.cpp  ComToolAutoReplyDialog.h  ComToolAutoReplyDialog.ui  ComToolHistory.cpp  ComToolUSB.cpp  Comtool.cpp  Comtool.h  comtool.cpp  comtool.h  comtool.ui  comtoolsetting.cpp  comtoolsetting.h  comtoolsetting.ui
components/ComTool/depend/: head.h
components/DataCirculation/: datacirculation.cpp  datacirculation.h  datacirculation.ui  dataengineinterface.h
components/IICDeviceBasic/: IICDeviceBasic.cpp  IICDeviceBasic.h  IICDeviceBasic.ui  IICDeviceEach.cpp  IICDeviceEach.h  IICDeviceEach.ui  iicdevicebasic.h  iicdevicebasic.ui
components/SideBarButton/: SideBarButton.cpp  SideBarButton.h  SideBarButton.ui
components/TCPBridgeConfiguration/: tcpbridgeconfiguration.cpp  tcpbridgeconfiguration.h  tcpbridgeconfiguration.ui
components/TCPCom/: TCPCom.cpp  TCPCom.h  TCPCom.ui  Tcpcom.cpp  Tcpcom.h  tcpcom.cpp  tcpcom.h  tcpcom.ui
components/materiallib/: qtmaterialcheckable.cpp  qtmaterialcheckable_internal.cpp  qtmaterialcheckable_p.h  qtmaterialoverlaywidget.cpp  qtmaterialripple.cpp  qtmaterialrippleoverlay.cpp  qtmaterialstatetransition.cpp  qtmaterialtheme.cpp
config/: Device1.ini  Device2.ini  main.ini
config/I2C/: Board.ini  MPU6050.py  mpu6050.ini
config/configTemplate/: Device1.ini
include/qmetarial/: RepeaterWidget.h
include/qmetarial/lib/: qtmaterialcheckable.h  qtmaterialtheme.h
main/: CMakeLists.txt  CfgClass.cpp  CfgClass.h  TabEvent.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  statebutton.cpp  statebutton.h
main/api/: CMakeLists.txt
main/api/qextserialport/: CMakeLists.txt
main/components/ChannelConfiguration/: channelconfiguration.cpp  channelconfiguration.h  channelconfiguration.ui
main/components/Charts/: charts.cpp  charts.h  charts.ui
main/components/ComTool/: comtool.cpp  comtool.h
main/components/SideBarButton/: SideBarButton.cpp  SideBarButton.h  SideBarButton.ui
main/config/: main.ini
main/ui/: mainwindow.ui  statebutton.ui
thirdLib/: CMakeLists.txt
thirdLib/qcustomplot/: CMakeLists.txt  changelog.txt  qcustomplot.cpp  qcustomplot.h
thirdLib/qmetarial/: CMakeLists.txt  qtmaterialautocomplete_internal.cpp  qtmaterialautocomplete_p.h  qtmaterialdialog_internal.cpp  qtmaterialdialog_internal.h  qtmaterialdrawer.cpp  qtmaterialflatbutton.cpp  qtmaterialflatbutton_internal.cpp  qtmaterialprogress_internal.cpp  qtmaterialradiobutton.cpp  qtmaterialsnackbar.cpp  qtmaterialtabs.cpp  qtmaterialtextfield.cpp  qtmaterialtoggle_p.h
thirdLib/qmetarial/include/qmetarial/: qtmaterialsnackbar.h  qtmaterialtable.h
thirdLib/qmetarial/include/qmetarial/lib/: qtmaterialstyle.h
thirdLib/qmetarial/materiallib/: qtmaterialcheckable.cpp  qtmaterialstyle.cpp  qtmaterialtheme.cpp
thirdPartyTool/: result.txt  生成三角函数.py
thirdTarget_ComTool/: CMakeLists.txt  defineH.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
thirdTarget_ComTool/config/: main.ini
