add_subdirectory(RepeaterWidget)
add_subdirectory(TCPHandle)
add_subdirectory(ComToolDepend)
add_subdirectory(Highlighter)
add_subdirectory(ConfigClass)
add_subdirectory(QPushButtonWithMouse)
add_subdirectory(QCustomPlotWithMouse)
add_subdirectory(QTextEditWithKey)
add_subdirectory(PythonWork)
add_subdirectory(USBHandle)

#IF (WIN32)
#    MESSAGE(STATUS "Now is windows")
#
#
#ELSEIF (UNIX)
#    MESSAGE(STATUS "Now is UNIX-like OS's.")
#
#ENDIF ()